--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -33,7 +33,7 @@ src="images/u11.png" border="0" alt=""></span>
 <DIV id=u8 style="position:absolute; left:150px; top:317px; width:530px; height:200px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u8_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">
 
-  <%= radio_button_tag 'type', 'sign_up'%>I don't have a soccerkids account.<br/>
+  <%= radio_button_tag 'type', 'sign_up','true'%>I don't have a soccerkids account.<br/>
   <%= radio_button_tag 'type', 'reg_pgm'%>I have a Soccerkids account and would like to register for a program.<br/>
   <%= radio_button_tag 'type', 'payment' %>I would like to log in to make a payment.<br/>
   <%= radio_button_tag 'type', 'per_info' %>I would like to log in to edit my personal information.<br/>
@@ -42,6 +42,3 @@ src="images/u11.png" border="0" alt=""></span>
 </span></DIV></DIV>
 
 <% end %>
-
-
-
