--- a/app/views/program_list/index.html.erb
+++ b/app/views/program_list/index.html.erb
@@ -15,8 +15,9 @@
 
 <% @program_list.each do |programlist| %>
   <tr>
-    <td><div style="text-align:center"><span style=" font-family:'Verdana'; color:#0000FF; font-size:15pt;"><u><b><li><div style="position:absolute; left:px; top:px; width:600px; height:4px; ; ;text-align:center">
-    <%= link_to "#{programlist.name}",events_path(:pl => programlist.id) %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'New Event', new_event_path(:pl =>programlist.id)%></td>
+    <td><br><div style="text-align:center"><span style=" font-family:'Verdana'; color:#0000FF; font-size:15pt;"><u><b><li><div style="position:absolute; left:px; top:px; width:600px; height:4px; ; ;text-align:center">
+    <%= link_to "#{programlist.name}",events_path(:pl => programlist.id) %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<%= link_to 'New Event', new_event_path(:pl =>programlist.id)%></td><br>
     
   </tr>
   
