--- a/app/views/transaction/show.html.erb
+++ b/app/views/transaction/show.html.erb
@@ -1,28 +1,28 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>First name:</b>
-  <%= @transaction.first_name %>
+  <b> name:</b>
+  <%= @transaction.name %>
 </p>
 
 <p>
-  <b>Middle name:</b>
-  <%= @transaction.middle_name %>
+  <b>address:</b>
+  <%= @transaction.adress %>
 </p>
 
 <p>
-  <b>Last name:</b>
-  <%= @transaction.last_name %>
+  <b>city:</b>
+  <%= @transaction.city %>
 </p>
 
 <p>
-  <b>Gender:</b>
-  <%= @transaction.gender %>
+  <b>state:</b>
+  <%= @transaction.state %>
 </p>
 
 <p>
-  <b>Dob:</b>
-  <%= @transaction.dob %>
+  <b>zip:</b>
+  <%= @transaction.zip %>
 </p>
 
 <p>
@@ -31,13 +31,28 @@
 </p>
 
 <p>
-  <b>School name:</b>
-  <%= @transaction.school_name %>
+  <b>card_type:</b>
+  <%= @transaction.card_type %>
 </p>
 
 <p>
-  <b>Registrant info:</b>
-  <%= @transaction.registrant_info %>
+  <b>card_number:</b>
+  <%= @transaction.card_number %>
+</p>
+
+<p>
+  <b>card_date:</b>
+  <%= @transaction.card_date %>
+</p>
+
+<p>
+  <b>card_verification:</b>
+  <%= @transaction.card_verification %>
+</p>
+
+<p>
+  <b>player_id:</b>
+  <%= @transaction.player_id %>
 </p>
 
 
