--- a/app/views/events/full.html.erb
+++ b/app/views/events/full.html.erb
@@ -1,61 +1,12 @@
-
-
 <%= render :partial => "layouts/first" %>
-<DIV id=ou3 style="position:absolute; left:504px; top:55px; width:96px; height:26px;; overflow:visible">
-
-<span style="position:absolute; left:-3px; top:-3px; width:104px; height:34px; ;
-filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Program details page_files/u3.png',sizingMethod='scale');
-"><img style="width:104px; height:34px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
-src="Program details page_files/u3.png" border="0" alt=""></span>
-
-</DIV>
-
-
-<DIV id=ou5 style="position:absolute; left:593px; top:55px; width:79px; height:26px;; overflow:visible">
-
-<span style="position:absolute; left:-3px; top:-3px; width:87px; height:34px; ;
-filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Program details page_files/u5.png',sizingMethod='scale');
-"><img style="width:87px; height:34px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
-src="Program details page_files/u5.png" border="0" alt=""></span>
-
-</DIV>
-
-
-<DIV id=u7ann style="font-size:1px; position:absolute; left:41px; top:50px; width:1px; height:1px; overflow:visible"></DIV>
-
-
-<DIV id=u9ann style="font-size:1px; position:absolute; left:101px; top:50px; width:1px; height:1px; overflow:visible"></DIV>
-
-
-
-
-
-<DIV id=ou15 style="position:absolute; left:762px; top:54px; width:60px; height:26px;; overflow:visible">
-
-<span style="position:absolute; left:-3px; top:-3px; width:68px; height:34px; ;
-filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Program details page_files/u15.png',sizingMethod='scale');
-"><img style="width:68px; height:34px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
-src="Program details page_files/u15.png" border="0" alt=""></span>
-
-</DIV>
 
 <DIV id=u17 style="position:absolute; left:70px; top:122px; width:120px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u17_rtf><span style=" font-family:'Verdana'; color:#0000ff; font-size:10pt;"><b>Selected Program</b></span></DIV></DIV>
-<DIV id=ou18 style="position:absolute; left:100px; top:150px; width:511px; height:261px;; overflow:visible">
-
-<span style="position:absolute; left:-3px; top:-3px; width:519px; height:269px; ;
-filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Program details page_files/u18.png',sizingMethod='scale');
-"><img style="width:519px; height:269px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
-src="Program details page_files/u18.png" border="0" alt=""></span>
-
-</DIV>
 <DIV id=u18container style="position:absolute; left:100px; top:150px; width:511px; height:261px;; overflow:visible">
-
 <DIV id=u19 style="position:absolute; left:2px; top:122px; width:506px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
 <DIV id=u19_rtf>&nbsp;</DIV></DIV>
 </DIV>
 <IMG id=u18 src="Resources/transparent.gif" style="position:absolute; left:100px; top:150px; width:510px; height:260px"  >
-
 <DIV id=u20 style="position:absolute; left:144px; top:180px; width:117px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u20_rtf><span style=" font-family:'Verdana'; color:#000fff; font-size:10pt;">Program name:</span></DIV></DIV>
 <DIV id=u21 style="position:absolute; left:107px; top:221px; width:150px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
@@ -78,95 +29,30 @@ src="Program details page_files/u18.png" border="0" alt=""></span>
 <DIV id=u29_rtf><span style=" font-family:'Arial'; color:#000fff; font-size:10pt;">  <%= @event.status %></span></DIV></DIV>
 <DIV id=ou30 style="position:absolute; left:326px; top:291px; width:81px; height:26px;; overflow:visible">
 
-<span style="position:absolute; left:-3px; top:-3px; width:89px; height:34px; ;
-filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Program details page_files/u30.png',sizingMethod='scale');
-"><img style="width:89px; height:34px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
-src="Program details page_files/u30.png" border="0" alt=""></span>
-
 </DIV>
-<DIV id=u30container style="position:absolute; left:326px; top:291px; width:81px; height:26px;; overflow:visible">
 
-<DIV id=u31 style="position:absolute; left:2px; top:4.5px; width:76px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
-<DIV id=u31_rtf><div style="text-align:center"><span style=" font-family:'Arial'; color:#000000; font-size:10pt;">View map</span></div></DIV></DIV>
-</DIV>
 <IMG id=u30 src="Resources/transparent.gif" style="position:absolute; left:326px; top:291px; width:80px; height:25px"  >
-
 <DIV id=u30ann style="font-size:1px; position:absolute; left:397px; top:287px; width:1px; height:1px; overflow:visible"></DIV>
-
 <DIV id=ou32 style="position:absolute; left:86px; top:417px; width:221px; height:26px;; overflow:visible">
-
 <span style="position:absolute; left:-3px; top:-3px; width:229px; height:34px; ;
 filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Program details page_files/u32.png',sizingMethod='scale');
 "><img style="width:229px; height:34px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
 src="Program details page_files/u32.png" border="0" alt=""></span>
 
-
-
-
-<p>
-  <b>First name:</b>
-  <%= @player.first_name %>
-</p>
-
-<p>
-  <b>Middle name:</b>
-  <%= @player.middle_name %>
-</p>
-
-<p>
-  <b>Last name:</b>
-  <%= @player.last_name %>
-</p>
-
-<p>
-  <b>Gender:</b>
-  <%= @player.gender %>
-</p>
-
-<p>
-  <b>Dob:</b>
-  <%= @player.dob %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%= @player.user_id %>
-</p>
-
-<p>
-  <b>School name:</b>
-  <%= @player.school_name %>
-</p>
-
-<p>
-  <b>Registrant info:</b>
-  <%= @player.registrant_info %>
-</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<DIV id=u32container style="position:absolute; left:86px; top:417px; width:221px; height:26px;; overflow:visible">
-
-<DIV id=u33 style="position:absolute; left:2px; top:4.5px; width:216px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
-<DIV id=u33_rtf><div style="text-align:center"><span style=" font-family:'Verdana'; color:#0000FF; font-size:10pt;"><u></u> </span><span style=" font-family:'Verdana'; color:#808080; font-size:9pt;"></span></div></DIV></DIV>
+<DIV id=u15 style="position:absolute; left:125px; top:150px; width:650px; height:50px;text-align: left ; font-family:Arial; text-align:left;" >
+<table border="5">
+  <tr>
+    <td><%= @player.first_name  %></td>
+    <td><%= @player.middle_name %></td>
+    <td><%=  @player.last_name %></td>
+    <td><%=  @player.gender %></td>
+    <td><%= @player.dob%></td>
+    <td><%#= @player.user_id  %></td>
+    <td><%= @player.school_name  %></td>
+    <td><%= @player.registrant_info %></td>
+  </tr>
+</table>
 </DIV>
-<IMG id=u32 src="Resources/transparent.gif" style="position:absolute; left:86px; top:417px; width:220px; height:25px"  >
-
-<DIV id=u32ann style="font-size:1px; position:absolute; left:297px; top:413px; width:1px; height:1px; overflow:visible"></DIV>
-
-
 <DIV id=u35 style="position:absolute; left:110px; top:-60px; width:60px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u35_rtf><span style=" font-family:'Verdana'; color:#000fff; font-size:10pt;">Tuition:</span></DIV></DIV>
 <DIV id=u36 style="position:absolute; left:250px; top:-60px; width:40px; height:14px; text-align: left ; font-family:Arial; text-align:left;" >
