soccerkids after transaction

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -124,8 +124,9 @@ src="images/Contact info_files/Registration page_files/u16.png" border="0" alt="
   </div>
 <DIV id=u16container style="position:absolute; left:590px; top:705px; width:142px; height:26px;; overflow:visible">
 <DIV id=u17 style="position:absolute; left:2px; top:4.5px; width:137px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
-<DIV id=u17_rtf><div style="text-align:center"><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"> <%= f.submit %><% button_to "add player" , '/player/addplayer'%></span></div></DIV></DIV>
+<DIV id=u17_rtf><div style="text-align:center"><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"> <%= f.submit %></span></div></DIV></DIV>
 </DIV>
+
 <%#= link_to "Label", :controller => :player, :action => :addplayer %>
 <DIV id=u22 style="position:absolute; left:221px; top:604px; width:120px; height:28px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u22_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">&nbsp; <%= f.label :registrant_info %>Registrant Info (medical / special) </span></DIV></DIV>
