--- a/app/views/events/full.html.erb
+++ b/app/views/events/full.html.erb
@@ -47,9 +47,10 @@ src="Program details page_files/u32.png" border="0" alt=""></span>
     <td><%=  @player.last_name %></td>
     <td><%=  @player.gender %></td>
     <td><%= @player.dob%></td>
-    <td><%#= @player.user_id  %></td>
+    <td><%= @player.user_id  %></td>
     <td><%= @player.school_name  %></td>
     <td><%= @player.registrant_info %></td>
+     <td><%= link_to 'register',"/transaction/new/#{@event.id}/#{params[:player_id]}" %></td>
   </tr>
 </table>
 </DIV>
