--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -1,7 +1,7 @@
 <%#=image_tag '/images/u41.jpg'%>
 <%= form_tag "/home/redirect" do |f|%>
 
-<%= render :partial => "layouts/first" %>
+<%= render :partial => "layouts/home" %>
 <span style="position:absolute; left:100px; top:145px; width:600px; height:400px; ;
 filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Home_files/u0.png',sizingMethod='scale');
 "><img style="width:700px; height:400px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
