soccerkids after online

--- a/app/views/events/full.html.erb
+++ b/app/views/events/full.html.erb
@@ -31,6 +31,13 @@
 
 </DIV>
 
+<img border="4" alt="" src="/images/shirt.jpg" style="position:absolute; ;top:200px; width:200px; height:150px; left:550px; ">
+
+
+<DIV id=u15 style="position:absolute; ;top:400px; width:200px; height:150px; left:550px; text-align: left ; font-family:Arial; text-align:left;color:#000fff; font-size:20pt;">
+<%= link_to 'Enlarge image',use_enlarge_path, :onclick=>"window.open(this.href,'Enlarge image', 'height=800, width=600');return false;" %>
+</DIV>
+
 <IMG id=u30 src="Resources/transparent.gif" style="position:absolute; left:326px; top:291px; width:80px; height:25px"  >
 <DIV id=u30ann style="font-size:1px; position:absolute; left:397px; top:287px; width:1px; height:1px; overflow:visible"></DIV>
 <DIV id=ou32 style="position:absolute; left:86px; top:417px; width:221px; height:26px;; overflow:visible">
@@ -54,7 +61,16 @@ src="Program details page_files/u32.png" border="0" alt=""></span>
   </tr>
 </table>
 </DIV>
+
+
+
 <DIV id=u35 style="position:absolute; left:110px; top:-60px; width:60px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u35_rtf><span style=" font-family:'Verdana'; color:#000fff; font-size:10pt;">Tuition:</span></DIV></DIV>
 <DIV id=u36 style="position:absolute; left:250px; top:-60px; width:40px; height:14px; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u36_rtf><span style=" font-family:'Verdana'; color:#000fff; font-size:9pt;">$155 </span></DIV>
+<DIV id=u37 style="position:absolute; left:-140px; top:50px; width:200px; height:14px; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u37_rtf><span style=" font-family:'Verdana'; color:#000fff; font-size:9pt;">Tshirt&nbsp;Amount:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$50</span></DIV>
+<DIV id=u31 style="position:absolute; left:-80px; top:50px; width:200px; height:14px; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u31_rtf><span style=" font-family:'Verdana'; color:#000fff; font-size:20pt;">totalt&nbsp;Amount:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$205</span></DIV>
+
+
