soccerkids after validation

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,8 @@
 
 <%= render :partial => "layouts/first" %>
-<DIV id=u15 style="position:absolute; left:125px; top:150px; width:650px; height:25px;text-align: left ; font-family:Arial; text-align:left;" >
-<table border="5">
-to select the event click on register link of corresponding 
+<DIV id=u15 style="position:absolute; left:40px; top:150px; width:650px; height:25px;text-align: left ; font-family:Arial; text-align:left;" >
+<table border="4" cellspacing="5">
+To select the event click on register link of corresponding 
   <tr>
     <th>Name</th>
     <th>From time</th>
@@ -13,7 +13,7 @@ to select the event click on register link of corresponding
     <th>Coach</th>
     <th>Tuition</th>
   
-    <th></th>
+    
   </tr>
 
 <% @events && @events.each do |event| %>
