--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -2,9 +2,19 @@
 
 <script src="/javascripts/livevalidation_standalone.js"></script>
 
+<DIV>
+
+<span style="position:absolute; left:px; top:170px; width:698px; height:200px; ;
+filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/u50.png',sizingMethod='scale');
+"><img style="width:698px; height:32px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
+src="/images/u50.png" border="0" alt=""></span>
+
+</DIV>
+
+
 
 <div style="text-align:center"><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">
-<u><b><div style="position:absolute; left:100px; top:130px; width:600px; height:7px; ; ;text-align:center">
+<u><b><div style="position:absolute; left:100px; top:180px; width:600px; height:7px; ; ;text-align:center">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
