soccerkids after playersnew

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,17 +18,17 @@
 <DIV id=u20_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Program name:</span></DIV></DIV>
 <DIV id=u21 style="position:absolute; left:107px; top:221px; width:150px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u21_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Program description: </span></DIV></DIV>
-<DIV id=u22 style="position:absolute; left:130px; top:296px; width:120px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u22 style="position:absolute; left:130px; top:296px; width:250px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u22_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Program location:</span></DIV></DIV>
-<DIV id=u23 style="position:absolute; left:260px; top:296px; width:60px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u23 style="position:absolute; left:260px; top:296px; width:600px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u23_rtf><span style=" font-family:'Arial'; color:#000000; font-size:10pt;">  <%= @event.name %></span></DIV></DIV>
-<DIV id=u24 style="position:absolute; left:254px; top:180px; width:320px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u24 style="position:absolute; left:254px; top:180px; width:600px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u24_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"> <%= @event.name %></span></DIV></DIV>
 <DIV id=u25 style="position:absolute; left:260px; top:217px; width:340px; height:28px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u25_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">This class taught by Coach  <%= @event.coach %> Tuition is <%= @event.tuition %> for  <%= @event.dates %>class meetings.</span></DIV></DIV>
 <DIV id=u26 style="position:absolute; left:169px; top:260px; width:80px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u26_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Class Time:</span></DIV></DIV>
-<DIV id=u27 style="position:absolute; left:260px; top:260px; width:160px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u27 style="position:absolute; left:260px; top:260px; width:200x; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u27_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"><%= @event.from_time %> </span></DIV></DIV>
 <DIV id=u28 style="position:absolute; left:196px; top:331px; width:59px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u28_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Status:</span></DIV></DIV>
