--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,15 +1,6 @@
-<%= render :partial => "layouts/first" %>
+<%= render :partial => "layouts/register" %>
 
 <script src="/javascripts/livevalidation_standalone.js"></script>
-
-<DIV>
-
-<span style="position:absolute; left:px; top:170px; width:698px; height:200px; ;
-filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/u50.png',sizingMethod='scale');
-"><img style="width:698px; height:32px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
-src="/images/u50.png" border="0" alt=""></span>
-
-</DIV>
 
 
 
