--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -1,6 +1,7 @@
 <script src="/javascripts/livevalidation_standalone.js"></script>
-
-<%= render :partial => "layouts/first" %>
+<%= render :partial => "layouts/register" %>
+    <DIV  style="position:absolute; left:550px; top:675px; width:700px; height:18px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+</DIV>
 <%= form_for(@player) do |f| %>
   <% if @player.errors.any? %>
     <div id="error_explanation">
@@ -45,12 +46,15 @@ src="images/Contact info_files/Registration page_files/u16.png" border="0" alt="
 
  <%= f.hidden_field :user_id, :value => current_user.id %> 
   
-<DIV id=u16container style="position:absolute; left:590px; top:705px; width:500px; height:26px;; overflow:visible">
-<DIV id=u17 style="position:absolute; left:2px; top:-60px; width:500px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
-<DIV id=u17_rtf><div style="text-align:center"><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"> <%= f.submit %></span></div></DIV></DIV>
+<DIV id=u16container style="position:absolute; left:590px; top:650px; width:500px; height:26px;; overflow:visible">
+<DIV id=u17 style="position:absolute; left:-260px; top:0px; width:500px; height:14px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
+<DIV id=u17_rtf><div style="text-align:center"><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"> <%= f.submit "continue" %></span></div></DIV></DIV>
 </DIV>
+<DIV container style="position:absolute; left:440px; top:650px; width:50px; height:26px;; overflow:visible">
 
-<DIV id=u22 style="position:absolute; left:221px; top:576px; width:300px; height:28px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<%= f.submit "addplayer" %>
+</div>
+<DIV id=u22 style="position:absolute; left:221px; top:576px; width:100px; height:28px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u22_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">&nbsp; <%= f.label :registrant_info %>Registrant Info(medical / special) </span></DIV></DIV>
 <div style="position:absolute; left:350px; top:580px; width:500px; height:75px; ; ; text-align: left ; font-family:'Courier New'; font-size: 10pt; color:#000000; font-style:normal; font-weight:normal; text-decoration:none"  > <%= f.text_field :registrant_info %></div>
 <IMG id=u47 src="Resources/transparent.gif" style="position:absolute; left:190px; top:266px; width:550px; height:140px"  >
