--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,10 +39,10 @@
 
 </DIV>
 <DIV id=u30container style="position:absolute; left:226px; top:391px; width:150px; height:1px; ; overflow:visible">
-<h3>Listing&nbsp;your&nbsp;players&nbsp;click&nbsp;on&nbsp;player&nbsp;name&nbsp;to &nbsp;continue&nbsp;registeration&nbsp;&nbsp;&nbsp;</h3>
+<h3>Listing&nbsp;your&nbsp;players&nbsp;click&nbsp;on&nbsp;player&nbsp;name&nbsp;to &nbsp;continue&nbsp;registration&nbsp;&nbsp;&nbsp;</h3>
 
 
-<table border="1" cellspacing="10">
+<table border="1" cellspacing="5">
   <tr>
     <th>First&nbsp;name</th>
 </tr>
@@ -66,6 +66,5 @@
 <DIV id=u35_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Tuition:</span></DIV></DIV>
 <DIV id=u36 style="position:absolute; left:260px; top:364px; width:40px; height:14px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u36_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">$155 </span>
-<DIV id=u3 style="position:absolute; left:100px; top:200px; width:300px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
-<DIV id=u3_rtf><span style=" font-family:'Verdana'; color:#0000ff; font-size:15pt;"><%= link_to 'click here to choose different program',"/programs" %></span></DIV>
-
+<DIV id=u3 style="position:absolute; left:180px; top:0px; width:600px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u3_rtf><span style=" font-family:'Verdana'; color:#0000ff; font-size:13pt;"><%= link_to 'click here to choose different program',"/programs" %></span></DIV>
