--- a/app/views/transaction/new.html.erb
+++ b/app/views/transaction/new.html.erb
@@ -2,8 +2,8 @@
 <%= render :partial => "layouts/first" %>
 <script src="/javascripts/livevalidation_standalone.js"></script>
 
-<h3 align="center">Transaction</h3>
-<div align=center>
+<h2 align="left">Transaction</h2>
+<div align=left>
 <%= form_for :transaction ,:url=>{:action=>'create',:id=>params[:id]} do |f|%><br/>
 
 <%= f.hidden_field :user_id, :value => current_user.id %>
@@ -12,46 +12,43 @@ Card Holder Name:
 <br />
 <%= f.hidden_field :player_id, :value => params[:player_id] %>
 
-Billing Address:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Billing Address:
 <%=f.text_field:adress %><br />
 <br />
 
-City:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;City:            
 <%=f.text_field:city %><br />
 <br />
-
-State:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;State:
 <%=f.text_field:state %><br />
 <br />
 
-Zip:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zip:
 <%=f.text_field:zip %><br />
 <br />
 
 
 
-What Kind Of Card 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What Kind Of Card: 
 <%= f.select:card_type, options_for_select(['Visa', 'Master Card']) %><br />
 <br />
 
-amount:
-<%= f.text_field:amount, :value=>205%> </br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amount:
+<%= f.text_field:amount, :value=>205%> </br><br />
 
 
 
-Card Number
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Card Number
 <%=f.text_field:card_number %><br />
 <br />
- 
-
-
-Expiration Date*
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Expiration Date*
 <%=f.date_select :card_date,:start_year => 2011,:end_year =>2025,:prompt => :'select',:order => [:day, :month, :year] %>
 <br />
 <br />
 Card Verification Number:
-<%=f.text_field:card_verification%><br />
+<%=f.password_field:card_verification%><br />
 <br />
+
 
 
 <%= f.submit 'Continue'%>
@@ -78,7 +75,7 @@ f4.add( Validate.Numericality );
 <script>
 var f5 = new LiveValidation('transaction_card_verification');
 f5.add( Validate.Presence );
-f5.add( Validate.Numericality );
+
 </script>
 <script>
 var f6 = new LiveValidation('transaction_card_date');
