--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,19 +16,19 @@
 
 <DIV id=u20 style="position:absolute; left:144px; top:180px; width:117px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u20_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Program name:</span></DIV></DIV>
-<DIV id=u21 style="position:absolute; left:107px; top:221px; width:150px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u21 style="position:absolute; left:107px; top:221px; width:190px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u21_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Program description: </span></DIV></DIV>
-<DIV id=u22 style="position:absolute; left:130px; top:296px; width:250px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u22 style="position:absolute; left:130px; top:296px; width:220px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u22_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Program location:</span></DIV></DIV>
-<DIV id=u23 style="position:absolute; left:260px; top:296px; width:600px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u23 style="position:absolute; left:300px; top:296px; width:200px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u23_rtf><span style=" font-family:'Arial'; color:#000000; font-size:10pt;">  <%= @event.name %></span></DIV></DIV>
-<DIV id=u24 style="position:absolute; left:254px; top:180px; width:600px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u24 style="position:absolute; left:300px; top:180px; width:320px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u24_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"> <%= @event.name %></span></DIV></DIV>
-<DIV id=u25 style="position:absolute; left:260px; top:217px; width:340px; height:28px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u25 style="position:absolute; left:300px; top:217px; width:340px; height:28px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u25_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">This class taught by Coach  <%= @event.coach %> Tuition is <%= @event.tuition %> for  <%= @event.dates %>class meetings.</span></DIV></DIV>
-<DIV id=u26 style="position:absolute; left:169px; top:260px; width:80px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u26 style="position:absolute; left:169px; top:260px; width:140px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u26_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Class Time:</span></DIV></DIV>
-<DIV id=u27 style="position:absolute; left:260px; top:260px; width:200x; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u27 style="position:absolute; left:300px; top:260px; width:190px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u27_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"><%= @event.from_time %> </span></DIV></DIV>
 <DIV id=u28 style="position:absolute; left:196px; top:331px; width:59px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u28_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Status:</span></DIV></DIV>
@@ -39,10 +39,10 @@
 
 </DIV>
 <DIV id=u30container style="position:absolute; left:226px; top:391px; width:150px; height:1px; ; overflow:visible">
-<h3>Listing&nbsp;your&nbsp;players&nbsp;click&nbsp;on&nbsp;player&nbsp;name&nbsp;to &nbsp;continue&nbsp;registration&nbsp;&nbsp;&nbsp;</h3>
+<h3>Listing&nbsp;your&nbsp;players&nbsp;click&nbsp;on&nbsp;player&nbsp;name&nbsp;to &nbsp;continue&nbsp;registeration&nbsp;&nbsp;&nbsp;</h3>
 
 
-<table border="1" cellspacing="5">
+<table border="5">
   <tr>
     <th>First&nbsp;name</th>
 </tr>
@@ -64,7 +64,8 @@
 
 <DIV id=u35 style="position:absolute; left:195px; top:362px; width:60px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u35_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Tuition:</span></DIV></DIV>
-<DIV id=u36 style="position:absolute; left:260px; top:364px; width:40px; height:14px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u36 style="position:absolute; left:300px; top:364px; width:40px; height:14px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u36_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:9pt;">$155 </span>
-<DIV id=u3 style="position:absolute; left:180px; top:0px; width:600px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
-<DIV id=u3_rtf><span style=" font-family:'Verdana'; color:#0000ff; font-size:13pt;"><%= link_to 'click here to choose different program',"/programs" %></span></DIV>
+<DIV id=u3 style="position:absolute; left:100px; top:200px; width:300px; height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u3_rtf><span style=" font-family:'Verdana'; color:#0000ff; font-size:15pt;"><%= link_to 'click here to choose different program',"/programs" %></span></DIV>
+
