--- a/app/views/layouts/_first.html.erb
+++ b/app/views/layouts/_first.html.erb
@@ -1,28 +1,3 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CSS Menu Maker Installation Instructions</title>
-
-<style type="text/css">
-   body{padding:20px; font-size:15px; color:#000000; font-family:Arial, Helvetica, sans-serif;}
-   h2 {font-weight:bold; color:#000099; margin:10px 0px; }
-   p span {color:#006600; font-weight:bold; }
-   a, a:link, a:visited {color:#00000;}
-   textarea {width: 100%; padding: 10px; margin: 10px 0 15px 0; font-size: 20px; font-family: Consolas,monospace;}
-   textarea.html {height: 300px;}
-   p {margin: 0 0 10px 0;}
-   code, pre {font-family: Consolas,monospace; color: green;}
-   ol li {margin: 0 0 15px 0;}
-</style>
-
-</head>
-
-<body background="/images/a.jpeg">
-
-
-
-</body>
-</html>
 
 
 
@@ -56,8 +31,8 @@ src="/images/u30.png" border="0" alt=""></span>
 
 <DIV id=u21container style="position:absolute; left:290px; top:650px; width:146px; height:26px;; overflow:visible">
 
-<DIV id=u22 style="position:absolute; left:2px; top:50px; width:141px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
-<DIV id=u22_rtf><div style="text-align:center"><span style=" font-family:'Arial'; color:#0000FF; font-size:10pt;">soccerkids@railsfactory</span></div></DIV></DIV>
+<DIV id=u22 style="position:absolute; left:9px; top:50px; width:141px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
+<DIV id=u22_rtf><div style="text-align:center"><span style=" font-family:'Arial'; color:#000000; font-size:10pt;">soccerkids@railsfactory</span></div></DIV></DIV>
 </DIV>
 
 
@@ -129,9 +104,20 @@ src="/images/u30.png" border="0" alt=""></span>
 
 <DIV id=u38container style="position:absolute; left:768px; top:57px; width:40px; height:26px;; overflow:visible">
 
-<DIV id=u39 style="position:absolute; left:2px; top:4.5px; width:35px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
+<DIV id=u39 style="position:absolute; left:12px; top:4.5px; width:35px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
 <DIV id=u39_rtf><div style="text-align:center"><span style=" color:#000000; font-size:10pt;"><%= link_to 'helps', home_help_path %></span></div></DIV></DIV>
 </DIV>
+
+<DIV id=u39 style="position:absolute; left:500px; top:2px; width:100px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
+<DIV id=u39_rtf><div style="text-align:center"><span style=" color:#000000; font-size:10pt;"><%=Time.now.strftime("%eth %B %Y")%></span></div></DIV></DIV>
+</DIV>
+<DIV id=u39 style="position:absolute; left:620px; top:2px; width:35px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
+<DIV id=u39_rtf><div style="text-align:center"><span style=" color:#000000; font-size:10pt;"><%= Time.now.strftime("%A") %></span></div></DIV></DIV>
+</DIV>
+<DIV id=u39 style="position:absolute; left:700px; top:2px; width:35px; height:16px; ; ; text-align: center ; font-family:Arial; text-align:left;" >
+<DIV id=u39_rtf><div style="text-align:center"><span style=" color:#000000; font-size:10pt;"><%= Time.now.strftime("%I:%M%p") %></span></div></DIV></DIV>
+</DIV>
+
 
 
 <span style="position:absolute; left:830px; top:60px;  width:150px; height:60px;
