--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -8,9 +8,9 @@
   
 <div style="text-align:center"><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;"><u><b><li><div style="position:absolute; left:px; top:px; width:600px; height:4px; ; ;text-align:center">
    <%= link_to "#{@program.name}","program_list?pg="+@program.id.to_s%>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= link_to "Add Product", '/pages/product?param1=value1&param2=value2' %>
+          <%#= link_to "Add Product", '/pages/product?param1=value1&param2=value2' %>
           <%= link_to 'ShowALL',events_path(:pg =>@program.id)%>
-	   <%= link_to 'New ProgramList', new_program_list_path(:pg =>@program.id)%></li><br><br >  </br>
+	   <%#= link_to 'New ProgramList', new_program_list_path(:pg =>@program.id)%></li><br><br >  </br>
 	
    <%else%>
          <%= link_to @program.name,'#', :onclick => "display('#{@program.name}');" %><br/>
@@ -36,13 +36,13 @@ function display(id){
 
 }
 </script>
-<DIV id=u21 style="position:absolute; left:103px; top:-55px; width:102px; width:300px;height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u21 style="position:absolute; left:103px; top:-60px; width:102px; width:300px;height:16px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u21_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:16pt;"><b>Programs list</b></span></DIV></DIV>
-<DIV id=u22 style="position:absolute; left:90px; top:-100px; width:610px; height:32px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
+<DIV id=u22 style="position:absolute; left:90px; top:-110px; width:610px; height:32px; ; ; text-align: left ; font-family:Arial; text-align:left;" >
 <DIV id=u22_rtf><span style=" font-family:'Verdana'; color:#000000; font-size:10pt;">Here is the list of the programs in the coming seasons.... To view the details of a particular program, just click the link below.....</span></DIV></DIV>
 </DIV>
 
-<span style="position:absolute; left:60px; top:-69px; width:703px; height:5px; ;
+<span style="position:absolute; left:60px; top:-80px; width:703px; height:5px; ;
 filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/Program list_files/u23.png',sizingMethod='scale');
 "><img style="width:703px; height:5px; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);" 
 src="/images/Program list_files/u23.png" border="0" alt=""></span>
